tests/fail/elaboration/unification/mismatch/record-literal-singleton.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/record-literal-singleton.fathom:6:11
  │
6 │ { thing = unit } : { thing : Type }
  │           ^^^^ type mismatch, expected `Type`, found `()`
  │
  = expected `Type`
       found `()`

'''
